kubernetes/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: jenkins
  labels:
    app: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: andrezug/testkaniko:v0.7
        ports:
        - containerPort: 9080
      imagePullSecrets:
        - name: regcred  
---
apiVersion: v1
kind: Service
metadata:
  name: testwar-service
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testwar-ingress
  namespace: jenkins
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /mywar
            pathType: Prefix
            backend:
              service:
                name: testwar-service
                port:
                  number: 9080
